# IMU-Test-Harness

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  IMUPROC_tests.db  compose.yml  config.yaml  dockerfile  vcpkg.json  visualize.py
GpsService/: CMakeLists.txt  requirements.txt
GpsService/src/: GpsService.cpp  GpsService.hpp  SerialComService.hpp  Utils.cpp  Utils.hpp  main.cpp
GpsService/src/SerialPort/: BoostSerialPort.cpp  BoostSerialPort.hpp  SerialPortBase.hpp
GpsService/test/: GpsServiceTest.cpp  SerialComServiceTest.cpp
GpsService/test/MockClasses/: MockSerialPort.cpp  MockSerialPort.hpp
data/1/: GPSData.txt  IMUData.txt
data/2/: GPSData.txt  IMUData.txt
data_collection/: .gitignore  CMakeLists.txt
data_collection/data_visualization/: README.md  requirements.txt  visualize_data.py
data_collection/deploy/: data-collection.service
data_collection/include/: BatchQueue.hpp  BrokerService.hpp  GpsRecords.hpp  GpsService.hpp  ImuRecords.hpp  ImuService.hpp  Logger.hpp  SqliteManager.hpp  UsbSerialLocator.hpp  bno085_hal.hpp
data_collection/src/: BrokerService.cpp  GpsService.cpp  ImuService.cpp  Logger.cpp  SqliteManager.cpp  UsbSerialLocator.cpp  main.cpp
microcontroller/: .gitignore  CMakeLists.txt  README.md  deploy.sh  eim_config.toml  float_to_hex.py  graph.py  imu_log.csv  record.py  sdkconfig  sdkconfig.defaults  serialTest.py  test.py  test.sh  visualize.py
microcontroller/host_tests/: CMakeLists.txt
microcontroller/main/: CMakeLists.txt  crc.c  crc.h  main.c  main.cpp  serial.c  serial.h  sh2service.c  sh2service.h  sh2service2.c  sh2service2.h  utils.c  utils.cpp  utils.h  utils.hpp
microcontroller/test/: serial_tests.cpp  serial_writer_tests.cpp  utilstests.cpp
nmea/: CMakeLists.txt
nmea/src/: main.cpp
nmea/src/Networking/: CMakeLists.txt  MulticastService.hpp
nmea/src/Nmea/: CMakeLists.txt  NmeaService.cpp  NmeaService.hpp
nmea/src/Serial/: CMakeLists.txt
nmea/src/Yaml/: YamlConfigService.hpp
nmea_multicast_app/: CMakeLists.txt  config.yaml  recv.py  test_config.yaml  vcpkg.json
nmea_multicast_app/src/: main.cpp
nmea_multicast_app/src/Networking/: CMakeLists.txt  MulticastService.cpp  MulticastService.hpp
nmea_multicast_app/src/Nmea/: CMakeLists.txt  NmeaService.cpp  NmeaService.hpp
nmea_multicast_app/src/Serial/: BoostSerialPort.cpp  BoostSerialPort.hpp  CMakeLists.txt  SerialComService.cpp  SerialPortBase.hpp
nmea_multicast_app/src/Yaml/: CMakeLists.txt  YamlConfig.hpp  YamlConfigService.cpp  YamlConfigService.hpp
nmea_multicast_app/test/: NmeaServiceTest.cpp  SerialComServiceTest.cpp  YamlConfigServiceTest.cpp
references/: adafruit-9-dof-orientation-imu-fusion-breakout-bno085.txt
src/: BoostSerialPort.cpp  BoostSerialPort.hpp  DatabaseManager.cpp  DatabaseManager.hpp  DatabaseManagerStats.hpp  DatabaseRecord.hpp  EkfOutputRecord.hpp  GpsUpdate.hpp  IMUGPSFusionKF.cpp  IMUGPSFusionKF.hpp  IMULinearAccelerationRecord.hpp  IMUManager.cpp  IMUManager.hpp  IMUManagerStats.hpp  IMURotationVectorRecord.hpp  IMUSerialPortReader.cpp  IMUSerialPortReader.hpp  MagneticDeclination.cpp  MagneticDeclination.hpp  REMOVE_LATER_KF_LOGGER.hpp  RadarPositionNavigationController.cpp  RadarPositionNavigationController.hpp  SerialComService.cpp  SerialComService.hpp  SerialDataModel.hpp  SerialPortBase.hpp  YamlConfig.hpp  bno085_hal.cpp  demo.cpp  demo2.cpp  demo2.hpp  imu_data.hpp  main.cpp  max_stuff.txt  utils.hpp
src/GpsService/: GpsService.cpp  GpsService.hpp  main.cpp
src/Services/: CMakeLists.txt
src/crc/: crc.c  crc.h
src/gps/: GpsManager.cpp  GpsManager.hpp  GpsManagerBase.hpp  NMEAParser.cpp  NMEAParser.hpp  NMEAParserData.hpp  NMEAParserPacket.cpp  NMEAParserPacket.hpp  NMEASentenceBase.cpp  NMEASentenceBase.hpp  NMEASentenceGGA.cpp  NMEASentenceGGA.hpp  NMEASentenceRMC.cpp  NMEASentenceRMC.hpp  NmeaMessage.hpp  NmeaReader.cpp  NmeaReader.hpp
test/: DeclinationAngleTests.cpp  IMUManagerTests.cpp  IMUSerialPortReaderTests.cpp  RadarPositionNavigationControllerTests.cpp  SerialComServiceTest.cpp  YamlConfigServiceTest.cpp  global_rotation_tests.cpp  imu_utils_tests.cpp  test_IMUGPSFusionKF.cpp
test/MockClasses/: MockSerialPort.cpp  MockSerialPort.hpp
